# mlops-fashion-kaggle

./: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
completions/: fashionctl.fish
configs/: infer.yaml  train.yaml  train_visual.yaml  train_visual_debug.yaml
configs/data/: default.yaml  image.yaml  image_debug.yaml  inference.yaml
configs/model/: collaborative.yaml  content.yaml  hybrid.yaml  visual.yaml
configs/training/: debug.yaml  debug_visual.yaml  default.yaml  m1.yaml
configs/wandb/: default.yaml
data/: .gitignore
data/raw/: customers.csv.dvc  images.dvc  transactions_train.csv.dvc
src/fashion/: cli.py  config.py  console.py  main.py  train_visual.py
src/fashion/commands/: __init__.py  datasets.py  models.py
src/fashion/data/: __init__.py  datamodule.py  dataset.py  image_datamodule.py  image_dataset.py
src/fashion/models/: __init__.py  architectures.py  lightning.py  metrics.py  visual_lightning.py  visual_model.py
